objects/TimeSheet__c.object
<CustomObject>
    <description>This object is created to save the records of the timesheet of the employee.</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>This field is used to enter the date of the timesheet.</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is used to enter the description of the timesheet of the employee.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Epic__c</fullName>
        <description>This field is used to enter the epic of the timesheet of the employee.</description>
        <label>Epic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <description>This field is used to Organisation in the timesheet.</description>
        <label>Organisation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is used to fetch the project in the timesheet.</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>TimeSheets</relationshipLabel>
        <relationshipName>TimeSheets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used to set the status of the timesheet records.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <description>This field is used to set task of the user.</description>
        <label>Task</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <description>This field is used the set the Ticket Number of the ticket which is assign to the employee.</description>
        <label>Ticket Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spend__c</fullName>
        <description>This field is used to set the time taken by the user for complete their task.</description>
        <label>Time Spend</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Useer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Useer__c</referenceTo>
        <relationshipLabel>TimeSheets</relationshipLabel>
        <relationshipName>TimeSheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TimeSheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Ticket_Number__c</columns>
        <columns>Useer__c</columns>
        <columns>Epic__c</columns>
        <columns>Submit_Record__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Useer__c</field>
            <operation>equals</operation>
            <value>Suhail</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>TimeSheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeSheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Enter_Valid_date</fullName>
        <active>false</active>
        <description>you not enter next date.</description>
        <errorConditionFormula>Date__c &gt; today()</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Enter Valid date.</errorMessage>
    </validationRules>
</CustomObject>